--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="navbar">
   <div>
-    <button mat-icon-button  aria-label="Example icon-button with menu icon">
+    <button mat-mini-fab  aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
     <span>My App</span>
