--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,17 +1,22 @@
 <mat-toolbar class="navbar">
-  <div>
-    <button mat-mini-fab class="mr-100"  aria-label="Example icon-button with menu icon">
+  <div class="flex flex-row">
+    <button
+      mat-mini-fab
+      class="mr-2"
+      aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
-    <span>My App</span>
+    <span>Tube Bazaar</span>
   </div>
   <div>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <button
+      mat-icon-button
+      class="example-icon favorite-icon"
+      aria-label="Example icon-button with heart icon">
       <mat-icon>favorite</mat-icon>
     </button>
     <button mat-icon-button aria-label="Example icon-button with share icon">
       <mat-icon>share</mat-icon>
     </button>
   </div>
-
 </mat-toolbar>
