--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,8 +1,8 @@
-@use "@angular/material" as mat;
-@use "./styles/theme_colors.scss" as theme-colors;
+@use '@angular/material' as mat;
+@use './styles/theme_colors.scss' as theme-colors;
 @include mat.core();
 
-@import "tailwindcss";
+@import 'tailwindcss';
 
 html {
   color-scheme: light dark;
@@ -19,8 +19,11 @@ html {
   );
 }
 
-html, body { height: 100%; }
-body { margin: 0;  }
-
-
-
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+}
