--- a/frontend/src/styles/_theme_colors.scss
+++ b/frontend/src/styles/_theme_colors.scss
@@ -4,109 +4,115 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
-// Note: Color palettes are generated from primary: #6750a4
+// Note: Color palettes based on earth tones
 $_palettes: (
   primary: (
+    // Olive green
     0: #000000,
-    10: #22005d,
-    20: #381e72,
-    25: #432b7e,
-    30: #4f378a,
-    35: #5b4397,
-    40: #6750a4,
-    50: #8069bf,
-    60: #9a83db,
-    70: #b69df7,
-    80: #cfbcff,
-    90: #e9ddff,
-    95: #f6eeff,
-    98: #fdf7ff,
-    99: #fffbff,
+    10: #1a2000,
+    20: #2a3600,
+    25: #324100,
+    30: #3a4c00,
+    35: #445700,
+    40: #4d6300,
+    50: #637800,
+    60: #798d00,
+    70: #90a318,
+    80: #a7b938,
+    90: #c1d555,
+    95: #d7e979,
+    98: #e9f5a0,
+    99: #f5fcc7,
     100: #ffffff,
   ),
   secondary: (
+    // Warm brown
     0: #000000,
-    10: #1f1635,
-    20: #342b4b,
-    25: #3f3657,
-    30: #4b4263,
-    35: #574d6f,
-    40: #63597c,
-    50: #7c7296,
-    60: #968bb1,
-    70: #b1a5cc,
-    80: #cdc0e9,
-    90: #e9ddff,
-    95: #f6eeff,
-    98: #fdf7ff,
-    99: #fffbff,
+    10: #231815,
+    20: #362a25,
+    25: #40332d,
+    30: #4a3c36,
+    35: #54453e,
+    40: #5e4e47,
+    50: #766459,
+    60: #8f7b6d,
+    70: #a89483,
+    80: #c4ae9b,
+    90: #e0c9b4,
+    95: #eedbca,
+    98: #f8eadc,
+    99: #fcf2e8,
     100: #ffffff,
   ),
   tertiary: (
+    // Terracotta/rust
     0: #000000,
-    10: #3c002b,
-    20: #5a1243,
-    25: #681e4f,
-    30: #752a5b,
-    35: #843667,
-    40: #924274,
-    50: #af5a8e,
-    60: #cd73a8,
-    70: #eb8dc4,
-    80: #ffaedb,
-    90: #ffd8ea,
-    95: #ffecf3,
-    98: #fff8f8,
-    99: #fffbff,
+    10: #350e00,
+    20: #541b00,
+    25: #632200,
+    30: #722a00,
+    35: #813300,
+    40: #903c00,
+    50: #ad5119,
+    60: #ca6731,
+    70: #e37e48,
+    80: #f89764,
+    90: #ffb68f,
+    95: #ffd0b9,
+    98: #ffe1d1,
+    99: #ffede5,
     100: #ffffff,
   ),
   neutral: (
+    // Soft neutral with slight warmth
     0: #000000,
-    10: #1d1b20,
-    20: #322f35,
-    25: #3d3a41,
-    30: #48464c,
-    35: #545158,
-    40: #605d64,
-    50: #79767d,
-    60: #938f96,
-    70: #aea9b1,
-    80: #cac5cc,
-    90: #e6e0e9,
-    95: #f5eff7,
-    98: #fdf7ff,
-    99: #fffbff,
+    10: #1f1d1b,
+    20: #34302e,
+    25: #3e3a38,
+    30: #494540,
+    35: #544f4a,
+    40: #5f5a55,
+    50: #78736d,
+    60: #928c86,
+    70: #aca6a0,
+    80: #c7c1ba,
+    90: #e2dcd5,
+    95: #f0ebe5,
+    98: #f9f4ee,
+    99: #fcf8f3,
     100: #ffffff,
-    4: #0f0d13,
-    6: #141218,
-    12: #211f24,
-    17: #2b292f,
-    22: #36343a,
-    24: #3b383e,
-    87: #ded8e0,
-    92: #ece6ee,
-    94: #f2ecf4,
-    96: #f8f2fa,
+    4: #12100e,
+    6: #17140f,
+    12: #242018,
+    17: #2f2b25,
+    22: #39352e,
+    24: #3e3a33,
+    87: #d9d3cc,
+    92: #e6e0da,
+    94: #ede8e3,
+    96: #f4efea,
   ),
   neutral-variant: (
+    // Muted sage
     0: #000000,
-    10: #1d1a24,
-    20: #322f3a,
-    25: #3d3a45,
-    30: #494551,
-    35: #55505c,
-    40: #615c69,
-    50: #7a7582,
-    60: #948e9c,
-    70: #afa9b7,
-    80: #cbc4d2,
-    90: #e7e0ee,
-    95: #f5eefd,
-    98: #fdf7ff,
-    99: #fffbff,
+    10: #1c1f1a,
+    20: #31352e,
+    25: #3b3f38,
+    30: #464a42,
+    35: #51554c,
+    40: #5c6057,
+    50: #747b6f,
+    60: #8d9387,
+    70: #a7ada0,
+    80: #c1c8ba,
+    90: #dce3d4,
+    95: #eaf1e2,
+    98: #f4fbec,
+    99: #f9fff1,
     100: #ffffff,
   ),
   error: (
+    // Deeper rust for errors
     0: #000000,
     10: #410002,
     20: #690005,
@@ -129,7 +135,7 @@ $_palettes: (
 $_rest: (
   secondary: map.get($_palettes, secondary),
   neutral: map.get($_palettes, neutral),
-  neutral-variant: map.get($_palettes,  neutral-variant),
+  neutral-variant: map.get($_palettes, neutral-variant),
   error: map.get($_palettes, error),
 );
 
