--- a/frontend/src/app/components/poster-card/poster-card.component.html
+++ b/frontend/src/app/components/poster-card/poster-card.component.html
@@ -1,22 +1,20 @@
-<mat-card class="!shadow-md" appearance="outlined">
-  <mat-card-header>
-    <mat-card-title>Billy Strings</mat-card-title>
-    <mat-card-subtitle>Pine Knob - 10/4/2024</mat-card-subtitle>
-  </mat-card-header>
+<div class="card shadow mb-4">
+  <div class="card-header">
+    <h5 class="card-title mb-0">Billy Strings</h5>
+    <h6 class="card-subtitle text-muted">Pine Knob - 10/4/2024</h6>
+  </div>
 
-  <mat-card-content>
+  <div class="card-body p-1">
     <img
-      class="p-1 !rounded-lg"
       src="https://i.etsystatic.com/34128228/r/il/b3b09a/6344453758/il_794xN.6344453758_ix9c.jpg"
-      alt="Photo of a Shiba Inu" />
-  </mat-card-content>
+      class="img-fluid rounded"
+      alt="Billy Strings concert poster" />
+  </div>
 
-  <mat-card-footer class="flex flex-end">
-    <mat-card-actions>
-      <button mat-button>
-        <mat-icon>price_change</mat-icon>
-        bid $207.00
-      </button>
-    </mat-card-actions>
-  </mat-card-footer>
-</mat-card>
+  <div class="card-footer text-end">
+    <button class="btn btn-outline-primary">
+      <i class="bi bi-tag-fill me-1"></i>
+      bid $207.00
+    </button>
+  </div>
+</div>
