--- a/frontend/src/app/components/poster-card/poster-card.component.html
+++ b/frontend/src/app/components/poster-card/poster-card.component.html
@@ -1,18 +1,20 @@
-<div class="card shadow mb-4">
-  <div class="card-header">
-    <h5 class="card-title mb-0">Billy Strings</h5>
-    <h6 class="card-subtitle text-muted">Pine Knob - 10/4/2024</h6>
+<div class="card shadow mb-3 mb-md-4">
+  <div class="card-header py-2 py-md-3">
+    <h5 class="card-title mb-0 fs-6 fs-md-5">Billy Strings</h5>
+    <h6 class="card-subtitle text-muted small">Pine Knob - 10/4/2024</h6>
   </div>
 
   <div class="card-body p-1">
-    <img
-      src="https://i.etsystatic.com/34128228/r/il/b3b09a/6344453758/il_794xN.6344453758_ix9c.jpg"
-      class="img-fluid rounded"
-      alt="Billy Strings concert poster" />
+    <div class="poster-image-container">
+      <img
+        src="https://i.etsystatic.com/34128228/r/il/b3b09a/6344453758/il_794xN.6344453758_ix9c.jpg"
+        class="img-fluid rounded w-100"
+        alt="Billy Strings concert poster" />
+    </div>
   </div>
 
-  <div class="card-footer text-end">
-    <button class="btn btn-outline-primary">
+  <div class="card-footer py-2 py-md-3 text-end">
+    <button class="btn btn-outline-primary btn-sm btn-md-md">
       <i class="bi bi-tag-fill me-1"></i>
       bid $207.00
     </button>
